--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foodies - Restaurant</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Restaurant Salle Élégance</title>
+
+    <!-- Bootstrap CSS & Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <style>
         /* Navbar */
@@ -22,8 +24,6 @@
             align-items: center;
             justify-content: space-between;
             padding: 50px;
-
-            /*permete de mettre au centre*/
         }
 
         .hero-text {
@@ -44,26 +44,13 @@
             border: none;
         }
 
-        .btn-secondary-custom {
-            background-color: white;
-            color: black;
-            padding: 10px 20px;
-            border-radius: 5px;
-            border: 1px solid black;
-        }
+        .profile-img {
+            width: 180px;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 4px solid white;
 
-        .hero-illustrator {
-            background-image: url("images/bg/bg-2.jpg");
-            /*addichage de mon image comment image de fond*/
-            background-position: center;
-            /*position de mon image au centre*/
-            background-size: cover;
-            /*permete de couvrir toute la section*/
-            padding: 100px 20px;
-            /*ajoute un espace intérieur de 100px en haut et en bas et 20px à gauche et à droite*/
-            text-align: center;
-            /*permete de mettre au centre*/
-            color: black;
         }
     </style>
 </head>
@@ -73,28 +60,35 @@
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand">
-                <img src="saveurs elegante.png" alt="logo" width="90" height="90">
+                <img src="images\logo.jpg" alt="logo" width="120" height="120" />
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link text-danger-emphasis fw-bold" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-danger-emphasis fw-bold" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-danger-emphasis fw-bold" href="#">Explore Food</a>
-                    </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-danger-emphasis fw-bold" href="#">FAQ</a>
+                        <a class="nav-link text-danger fw-bold" href="index.html">A propos</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger fw-bold" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-danger fw-bold" href="projet.html" id="navbarDropdown"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false"> explore les differents
+                            plats</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
+                            <li><a class="dropdown-item" href="projet2.html">Menu apres midi</a></li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li><a class="dropdown-item" href="projet3.html">Menu soire</a></li>
+                        </ul>
+                    </li>
+
                 </ul>
                 <form class="d-flex">
                     <button class="btn btn-primary-custom">+977 9845667543</button>
@@ -103,68 +97,78 @@
         </div>
     </nav>
 
-    <!-- Section principale -->
-    <section class="hero-section container">
-        <div class="hero-text">
-            <h1 class="fw-bold text-dark">De bons choix alimentaires sont un bon investissement</h1>
-            <p class="text-muted">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, non numquam, recusandae aliquam quam
-                accusantium veritatis delectus nesciunt suscipit ipsum.
-            </p>
-            <button class="btn btn-primary-custom me-3">commande maintenant</button>
 
-        </div>
-        <div class="hero-image">
-            <img src="plat.jpg" alt="Plats délicieux">
+
+
+    <!-- Section Témoignage -->
+    <section class="py-5 mb-5" style="background-color: #C93A4A;">
+
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <div class="card p-5 text-center border-0 shadow-lg" style="border-radius: 10px;">
+                        <img src="images\profile.jpg" class="rounded-circle profile-img" alt="Photo de profil" />
+
+
+                        <p class="mt-3 text-dark">
+                            Bienvenue dans mon univers gastronomique !
+
+                            En tant que web développeur passionné de gastronomie, je suis ravi de vous présenter mon
+                            site web dédié aux délices de mon restaurant. Découvrez les plats extraordinaires qui font
+                            la réputation de notre établissement et explorez les spécialités qui nous définissent.
+
+                            Un voyage culinaire à travers nos créations
+
+                            Dans notre restaurant, nous sommes fiers de proposer une cuisine raffinée et authentique,
+                            élaborée avec des ingrédients frais et de qualité. Nos plats sont conçus pour vous faire
+                            découvrir de nouvelles saveurs et de nouvelles textures, tout en respectant les traditions
+                            culinaires qui nous ont inspirés.
+
+                            Découvrez nos spécialités
+
+                            Plats signature : nos créations uniques et originales, conçues pour vous surprendre et vous
+                            régaler.
+                            Classiques revisités : nos interprétations modernes des grands classiques de la cuisine,
+                            avec une touche de créativité et de fantaisie.
+                            Spécialités régionales : nos plats inspirés des traditions culinaires de différentes régions
+                            du monde, pour vous faire voyager à travers les saveurs.
+                            Un espace convivial pour partager des moments inoubliables
+
+
+                        </p>
+                        <h5 class="fw-bold mt-2 text-dark">Musafiri Muyumba Web developpeur</h5>
+                        <div class="mt-3">
+                            <span class="text-warning"><i class="bi bi-star-fill"></i></span>
+                            <span class="text-warning"><i class="bi bi-star-fill"></i></span>
+                            <span class="text-warning"><i class="bi bi-star-fill"></i></span>
+                            <span class="text-warning"><i class="bi bi-star-fill"></i></span>
+                            <span class="text-warning"><i class="bi bi-star-fill"></i></span>
+                        </div>
+                        <!-- Indicateurs (points) pour un éventuel carousel -->
+                        <div class="mt-4">
+                            <span class="mx-1 text-white" style="font-size: 20px;">•</span>
+                            <span class="mx-1 text-white-50" style="font-size: 20px;">•</span>
+                            <span class="mx-1 text-white-50" style="font-size: 20px;">•</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
-    <h1 class="p-3 mb-2 bg-danger text-white" style="font-size: 24px; text-align: center;">Illustration de nos
-        spécialités</h1>
-    <!-- Section principale -->
-    <section class="hero-section container">
-        <div class="hero-text">
-            <h1 class="fw-bold text-dark">Nous sommes fiers de préparer de vrais plats à partir des meilleurs
-                ingrédient.</h1>
-            <p class="text-muted">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, non numquam, recusandae aliquam quam
-                accusantium veritatis delectus nesciunt suscipit ipsum.
-            </p>
-            <button class="btn btn-primary-custom me-3">Learn More</button>
-
-        </div>
-        <div class="hero-image">
-            <img src="C:\Users\arago\Desktop\1-Les-bases-du-CSS\Restaurant-Website-master\images\img\img-1.png"
-                alt="Plats délicieux">
-        </div>
-    </section>
-    <section class="hero-section container">
-        <div class="hero-text">
-            <h1 class="fw-bold text-dark">Nous fabriquons tout à la main avec les meilleurs ingrédients possibles.</h1>
-            <p class="text-muted">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, non numquam, recusandae aliquam quam
-                accusantium veritatis delectus nesciunt suscipit ipsum.
-            </p>
-            <button class="btn btn-primary-custom me-3">Learn More</button>
-
-        </div>
-        <div class="hero-image">
-            <img src="C:\Users\arago\Desktop\1-Les-bases-du-CSS\Restaurant-Website-master\images\img\img-2.png"
-                alt="Plats délicieux">
-        </div>
-    </section>
-
-    <section class="hero-illustrator">
-        <div class="hero-container">
-            <h2>Lorsqu'un homme a le ventre plein, peu importe qu'il soit riche ou pauvre</h2>
-            <p>Des saveurs qui éveillent les sens</p>
-            <button class="btn btn-primary-custom me-3">Read on More</button>
-
-        </div>
-    </section>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <footer class="p-3 bg-danger text-white text-center">
+        Suivez-nous sur les réseaux sociaux :
+        <a href="https://www.facebook.com" target="_blank" class="text-white mx-2">
+            <i class="bi bi-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com" target="_blank" class="text-white mx-2">
+            <i class="bi bi-instagram"></i>
+        </a>
+        <br>2025 © Copyright
+    </footer>
+
 </body>
 
 </html>
