--- a/projet.html
+++ b/projet.html
@@ -128,7 +128,7 @@
             <div class="carousel-item">
                 <div class="d-flex flex-wrap justify-content-center gap-3">
                     <div class="card" style="width: 30rem;">
-                        <img src="/images/img/pizza.jpg" class="card-img-top img-fluid" alt="menu4">
+                        <img src="images/img/pizza.jpg" class="card-img-top img-fluid" alt="menu4">
                         <div class="card-body">
                             <h5 class="card-title">Pizza Pepperoni </h5>
                             <p class="card-text">Base moelleuse, sauce tomate épicée, mozzarella fondue, tranches de
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
-                        <img src="/images/bg/bg-3.jpg" class="card-img-top img-fluid" alt="menu5">
+                        <img src="images/bg/bg-3.jpg" class="card-img-top img-fluid" alt="menu5">
                         <div class="card-body">
                             <h5 class="card-title">Pizzette</h5>
                             <p class="card-text">Petites pizzas individuelles de 8 cm, parfaites pour les apéros,
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
-                        <img src="/images/bg/bg-1.jpg" class="card-img-top img-fluid" alt="menu6">
+                        <img src="images/bg/bg-1.jpg" class="card-img-top img-fluid" alt="menu6">
                         <div class="card-body">
                             <h5 class="card-title">Brunch tropical fruité</h5>
                             <p class="card-text">Un petit-déjeuner frais et coloré avec fruits tropicaux, parfait pour
