--- a/projet3.html
+++ b/projet3.html
@@ -106,7 +106,7 @@
                 <div class="d-flex flex-wrap justify-content-center gap-3">
                     <!-- Carte 1 : Spaghetti -->
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\img\pasta Pesto.webp" class="card-img-top img-fluid" alt="menu1">
+                        <img src="images\img\pasta Pesto.webp" class="card-img-top img-fluid" alt="menu1">
                         <div class="card-body">
                             <h5 class="card-title">spaghetti con prezzemolo </h5>
                             <p class="card-text">Un plat simple mais raffiné composé de spaghetti al dente... 💰 Prix :
@@ -115,7 +115,7 @@
                     </div>
                     <!-- Carte 2 : Kebab turque -->
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\img\kebab.jpg" class="card-img-top img-fluid" alt="menu2">
+                        <img src="images\img\kebab.jpg" class="card-img-top img-fluid" alt="menu2">
                         <div class="card-body">
                             <h5 class="card-title">kebap turque</h5>
                             <p class="card-text">Un sandwich savoureux composé de viande grillée... 💰 Prix : 9,90 €</p>
@@ -123,7 +123,7 @@
                     </div>
                     <!-- Carte 3 : Brochettes de poulet -->
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\img\bracciola.jpg" class="card-img-top img-fluid" alt="menu3">
+                        <img src="images\img\bracciola.jpg" class="card-img-top img-fluid" alt="menu3">
                         <div class="card-body">
                             <h5 class="card-title">Brochettes de Poulet Tikka</h5>
                             <p class="card-text">Tendres morceaux de poulet marinés aux épices indiennes... 💰 Prix :
@@ -138,7 +138,7 @@
                 <div class="d-flex flex-wrap justify-content-center gap-3">
                     <!-- Carte 4 : Hamburger -->
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\img\hamburger.jpg" class="card-img-top img-fluid" alt="menu4">
+                        <img src="images\img\hamburger.jpg" class="card-img-top img-fluid" alt="menu4">
                         <div class="card-body">
                             <h5 class="card-title">Hamburger </h5>
                             <p class="card-text">Sauce tomate épicée, mozzarella, viande savoureuse... 💶 Prix : 12,50 €
@@ -147,7 +147,7 @@
                     </div>
                     <!-- Carte 5 : Assiette grillée orientale -->
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\img\delizia.jpg" class="card-img-top img-fluid" alt="menu5">
+                        <img src="images\img\delizia.jpg" class="card-img-top img-fluid" alt="menu5">
                         <div class="card-body">
                             <h5 class="card-title"> Assiette Mix Grill Oriental</h5>
                             <p class="card-text">Un assortiment de viandes grillées et légumes parfumés... 💰 Prix :
@@ -156,7 +156,7 @@
                     </div>
                     <!-- Carte 6 : Kebab croustillant -->
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\img\panino.jpg" class="card-img-top img-fluid" alt="menu6">
+                        <img src="images\img\panino.jpg" class="card-img-top img-fluid" alt="menu6">
                         <div class="card-body">
                             <h5 class="card-title">Kebab croustillant & frites dorées</h5>
                             <p class="card-text">Pain pita garni de viande grillée, crudits et frites... 💰 Prix : 9,50
