--- a/projet2.html
+++ b/projet2.html
@@ -95,7 +95,7 @@
             <div class="carousel-item active">
                 <div class="d-flex flex-wrap justify-content-center gap-3">
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\pollo riz.jpg" class="card-img-top img-fluid" alt="menu1">
+                        <img src="images\img\pollo riz.jpg" class="card-img-top img-fluid" alt="menu1">
                         <div class="card-body">
                             <h5 class="card-title">Riz mukayaz plat chinois </h5>
                             <p class="card-text">Riz avec poisson et fruits de saison et tout le condiments orientale
