--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <!--la classe collapse navbar  c est la classe qui permete de faire disparaitre ou reapparaitre une navbar-->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
