--- a/projet3.html
+++ b/projet3.html
@@ -99,7 +99,7 @@
     <!-- Carrousel de cartes -->
     <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <h1 class="text-center mt-4">Menu Soire</h1>
+            <h1 class="text-center mt-4">Menu soirée</h1>
 
             <!-- Premier slide contenant 3 cartes de plats -->
             <div class="carousel-item active">
