--- a/projet3.html
+++ b/projet3.html
@@ -54,7 +54,7 @@
         <div class="container-fluid">
             <!-- Logo du restaurant -->
             <a class="navbar-brand" href="#">
-                <img src="\images\logo.jpg" alt="logo" width="120" height="120" />
+                <img src="\images\img\logo.jpg" alt="logo" width="120" height="120" />
             </a>
             <!-- Bouton responsive pour le menu sur petits écrans -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
