--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         .navbar-custom {
             background-color: white;
             padding: 15px;
+            position:fixed;
         }
 
         /* Section principale */
