--- a/index.html
+++ b/index.html
@@ -13,17 +13,15 @@
 
     <style>
         /* Navbar */
-        /* Navbar */
-.navbar-custom {
-    background-color: white;
-    padding: 15px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 999; /* pour rester au-dessus du contenu */
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* effet de léger ombrage */
-}
-
+        .navbar-custom {
+            background-color: white;
+            padding: 15px;
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 999;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
 
         /* Section principale */
         .hero-section {
@@ -31,7 +29,7 @@
             align-items: center;
             justify-content: space-between;
             padding: 50px;
-            
+            margin-top: 150px; /* Décale le contenu pour ne pas passer sous la navbar */
         }
 
         .hero-text {
@@ -58,8 +56,6 @@
             object-fit: cover;
             border-radius: 50%;
             border: 4px solid white;
-           
-
         }
     </style>
 </head>
@@ -69,7 +65,7 @@
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand">
-                <img src="images\logo.jpg" alt="logo" width="120" height="120" />
+                <img src="images/logo.jpg" alt="logo" width="120" height="120" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,27 +73,24 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
                     <li class="nav-item">
-                        <a class="nav-link text-danger fw-bold" href="index.html">A propos</a>
+                        <a class="nav-link text-danger fw-bold" href="index.html">À propos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-danger fw-bold" href="projet.html" id="navbarDropdown"
-                            role="button" data-bs-toggle="dropdown" aria-expanded="false"> explore les differents
-                            plats</a>
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">Explore les différents plats</a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="projet.html">Menu midi</a></li>
-                            <li><a class="dropdown-item" href="projet2.html">Menu apres midi</a></li>
+                            <li><a class="dropdown-item" href="projet2.html">Menu après-midi</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="projet3.html">Menu soire</a></li>
+                            <li><a class="dropdown-item" href="projet3.html">Menu soirée</a></li>
                         </ul>
                     </li>
-
                 </ul>
                 <form class="d-flex">
                     <button class="btn btn-primary-custom">+977 9845667543</button>
@@ -106,19 +99,13 @@
         </div>
     </nav>
 
-
-
-
     <!-- Section Témoignage -->
-    <section class="py-5 mb-5" style="background-color: #C93A4A;">
-
+    <section class="py-5 mb-5" style="background-color: #C93A4A; margin-top: 150px;">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="card p-5 text-center border-0 shadow-lg" style="border-radius: 10px;">
-                        <img src="images\profile.jpg" class="rounded-circle profile-img" alt="Photo de profil" />
-
-
+                        <img src="images/profile.jpg" class="rounded-circle profile-img" alt="Photo de profil" />
                         <p class="mt-3 text-dark">
                             Bienvenue dans mon univers gastronomique !
 
@@ -133,19 +120,13 @@
                             découvrir de nouvelles saveurs et de nouvelles textures, tout en respectant les traditions
                             culinaires qui nous ont inspirés.
 
-                            Découvrez nos spécialités
+                            Découvrez nos spécialités :
 
-                            Plats signature : nos créations uniques et originales, conçues pour vous surprendre et vous
-                            régaler.
-                            Classiques revisités : nos interprétations modernes des grands classiques de la cuisine,
-                            avec une touche de créativité et de fantaisie.
-                            Spécialités régionales : nos plats inspirés des traditions culinaires de différentes régions
-                            du monde, pour vous faire voyager à travers les saveurs.
-                            Un espace convivial pour partager des moments inoubliables
-
-
+                            - Plats signature : nos créations uniques et originales, conçues pour vous surprendre et vous régaler.
+                            - Classiques revisités : nos interprétations modernes des grands classiques.
+                            - Spécialités régionales : un voyage autour du monde à travers les assiettes.
                         </p>
-                        <h5 class="fw-bold mt-2 text-dark">Musafiri Muyumba Web developpeur</h5>
+                        <h5 class="fw-bold mt-2 text-dark">Musafiri Muyumba - Web développeur</h5>
                         <div class="mt-3">
                             <span class="text-warning"><i class="bi bi-star-fill"></i></span>
                             <span class="text-warning"><i class="bi bi-star-fill"></i></span>
@@ -153,7 +134,6 @@
                             <span class="text-warning"><i class="bi bi-star-fill"></i></span>
                             <span class="text-warning"><i class="bi bi-star-fill"></i></span>
                         </div>
-                        <!-- Indicateurs (points) pour un éventuel carousel -->
                         <div class="mt-4">
                             <span class="mx-1 text-white" style="font-size: 20px;">•</span>
                             <span class="mx-1 text-white-50" style="font-size: 20px;">•</span>
@@ -164,8 +144,6 @@
             </div>
         </div>
     </section>
-
-
 
     <footer class="p-3 bg-danger text-white text-center">
         Suivez-nous sur les réseaux sociaux :
