--- a/projet3.html
+++ b/projet3.html
@@ -147,7 +147,7 @@
                     </div>
                     <!-- Carte 5 : Assiette grillée orientale -->
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\img\delizia.jpg" class="card-img-top img-fluid" alt="menu5">
+                        <img src="delizia.jpg" class="card-img-top img-fluid" alt="menu5">
                         <div class="card-body">
                             <h5 class="card-title"> Assiette Mix Grill Oriental</h5>
                             <p class="card-text">Un assortiment de viandes grillées et légumes parfumés... 💰 Prix :
@@ -156,7 +156,7 @@
                     </div>
                     <!-- Carte 6 : Kebab croustillant -->
                     <div class="card" style="width: 30rem;">
-                        <img src="\images\img\panino.jpg" class="card-img-top img-fluid" alt="menu6">
+                        <img src="panino.jpg" class="card-img-top img-fluid" alt="menu6">
                         <div class="card-body">
                             <h5 class="card-title">Kebab croustillant & frites dorées</h5>
                             <p class="card-text">Pain pita garni de viande grillée, crudits et frites... 💰 Prix : 9,50
