--- a/projet2.html
+++ b/projet2.html
@@ -29,13 +29,10 @@
             object-fit: cover;
         }
 
-
-        /* Ajoute de l’espace entre les cartes et le footer de 200px */
         .carousel-inner {
             margin-bottom: 200px;
         }
 
-        /*ajoute en margin-top pour l espace en haut entre le footer et  le cards et le carrousel de 40px*/
         footer {
             margin-top: 40px;
         }
@@ -44,7 +41,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-custom">
+    <nav class="navbar navbar-expand-lg navbar-custom sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="images\logo.jpg" alt="logo" width="120" height="120" />
@@ -54,10 +51,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
                     <li class="nav-item">
                         <a class="nav-link text-danger fw-bold" href="index.html">À propos</a>
                     </li>
@@ -78,7 +73,6 @@
                             <li><a class="dropdown-item" href="projet.html">Menu soire</a></li>
                         </ul>
                     </li>
-
                 </ul>
                 <form class="d-flex">
                     <button class="btn btn-primary-custom" type="button">+977 9845667543</button>
@@ -97,41 +91,22 @@
                     <div class="card" style="width: 30rem;">
                         <img src="pollo riz.jpg" class="card-img-top img-fluid" alt="menu1">
                         <div class="card-body">
-                            <h5 class="card-title">Riz mukayaz plat chinois </h5>
-                            <p class="card-text">Riz avec poisson et fruits de saison et tout le condiments orientale
-                                💶 Prix : 12,50 €
-                                .</p>
+                            <h5 class="card-title">Riz mukayaz plat chinois</h5>
+                            <p class="card-text">Riz avec poisson et fruits de saison et tout le condiments orientale 💶 Prix : 12,50 €.</p>
                         </div>
                     </div>
-                    <!--lq class qui permete de faire notre card -->
                     <div class="card" style="width: 30rem;">
                         <img src="images\plat.jpg" class="card-img-top img-fluid" alt="menu2">
                         <div class="card-body">
                             <h5 class="card-title">Filet de bœuf grillé sauce au vin rouge</h5>
-                            <p class="card-text">Un tendre filet de bœuf, parfaitement grillé à la flamme, servi avec
-                                une délicieuse sauce au vin rouge réduite, relevée d’une touche d’échalotes et de poivre
-                                noir concassé. Garniture possible de légumes de saison ou purée maison, selon le choix
-                                du chef.
-                                🥩 Viande savoureuse, cuisson maîtrisée, sauce onctueuse.
-
-                                💶 Prix : 22,50 €
-
-                                .</p>
+                            <p class="card-text">Un tendre filet de bœuf, parfaitement grillé à la flamme, servi avec une délicieuse sauce au vin rouge réduite, relevée d’une touche d’échalotes et de poivre noir concassé. Garniture possible de légumes de saison ou purée maison, selon le choix du chef. 🥩 Viande savoureuse, cuisson maîtrisée, sauce onctueuse. 💶 Prix : 22,50 €.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
                         <img src="images\img\img-5.jpg" class="card-img-top img-fluid" alt="menu3">
                         <div class="card-body">
-                            <h5 class="card-title">Rénoise Tuelleuse a la fraises</h5>
-                            <p class="card-text">Un dessert raffiné et gourmand composé d’une génoise aérienne,
-                                délicatement imbibée de sirop parfumé, garnie d’une crème légère au mascarpone et
-                                parsemée de fraises fraîches. La tuile croustillante qui surmonte ce délice apporte une
-                                touche de contraste parfaite entre fondant et croquant.
-                                🍓 Un dessert idéal pour conclure un repas avec douceur et élégance.
-
-                                💶 Prix : 7,50 €
-
-                                .</p>
+                            <h5 class="card-title">Rénoise Tuelleuse à la fraises</h5>
+                            <p class="card-text">Un dessert raffiné et gourmand composé d’une génoise aérienne, délicatement imbibée de sirop parfumé, garnie d’une crème légère au mascarpone et parsemée de fraises fraîches. 🍓 💶 Prix : 7,50 €.</p>
                         </div>
                     </div>
                 </div>
@@ -143,40 +118,22 @@
                     <div class="card" style="width: 30rem;">
                         <img src="images\img\img-2.png" class="card-img-top img-fluid" alt="menu4">
                         <div class="card-body">
-                            <h5 class="card-title">Menu mixte pour Famille </h5>
-                            <p class="card-text">Base moelleuse, sauce tomate épicée, mozzarella fondue, tranches de
-                                pepperoni croustillantes, et basilic frais et hamburger et frites
-
-                                💶 Prix : 10,90 € .</p>
+                            <h5 class="card-title">Menu mixte pour Famille</h5>
+                            <p class="card-text">Base moelleuse, sauce tomate épicée, mozzarella fondue, tranches de pepperoni croustillantes, et basilic frais et hamburger et frites 💶 Prix : 10,90 €.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
                         <img src="images\riz.jpg" class="card-img-top img-fluid" alt="menu5">
                         <div class="card-body">
-                            <h5 class="card-title">Poulet Tikka Masala
-                            </h5>
-                            <p class="card-text">Un plat traditionnel indien, composé de morceaux de poulet marinés
-                                dans un mélange d'épices, grillés puis mijotés dans une sauce onctueuse à base de
-                                tomate, crème fraîche, ail et gingembre. Servi sur un lit de riz basmati parfumé,
-                                accompagné de pain naan en option.
-                                🌿 Un voyage culinaire aux saveurs épicées et réconfortantes.
-
-                                💶 Prix : 16,90 €</p>
+                            <h5 class="card-title">Poulet Tikka Masala</h5>
+                            <p class="card-text">Un plat traditionnel indien avec morceaux de poulet marinés, mijotés dans une sauce tomate-crème épicée, servi avec riz basmati et naan. 🌿 💶 Prix : 16,90 €.</p>
                         </div>
                     </div>
                     <div class="card" style="width: 30rem;">
                         <img src="images\pasta.jpg" class="card-img-top img-fluid" alt="menu6">
                         <div class="card-body">
-                            <h5 class="card-title">spaghetti con ragù di carne</h5>
-                            <p class="card-text">Un plat savoureux de spaghetti al dente, nappés d’un ragù de bœuf
-                                longuement mijoté avec des herbes aromatiques, des champignons et une sauce tomate
-                                maison. Le tout est délicatement parsemé de parmesan râpé pour une touche fondante et
-                                gourmande.
-                                🥄 Une expérience authentique de la cuisine italienne !
-
-                                💶 Prix : 14,90 €
-
-                                .</p>
+                            <h5 class="card-title">Spaghetti con ragù di carne</h5>
+                            <p class="card-text">Spaghetti al dente avec un ragù de bœuf mijoté aux herbes, champignons et sauce tomate maison, saupoudré de parmesan. 🥄 💶 Prix : 14,90 €.</p>
                         </div>
                     </div>
                 </div>
