--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,7 @@
             Votre message est arrive avec succes
             <button class="btn-close" data-ns-dismiss="alert" arial-label="close"></button>
         </div>
-        <h1 class="text-center mb-4">Reservation</h1>
+        <h1 class="text-center mb-4">Reservation de table</h1>
         <form id="form" class="form-container">
             <div class="mb-3">
                 <label for="name" class="form-label">Nom</label>
