--- a/contact.html
+++ b/contact.html
@@ -97,10 +97,15 @@
         </div>
         <h1 class="text-center mb-4">Reservation de table</h1>
         <form id="form" class="form-container">
-            <div class="mb-3">
-                <label for="name" class="form-label">Nom</label>
-                <input type="text" class="form-control" id="name" placeholder="Insérez votre nom">
-            </div>
+           <form class="row g-3">
+  <div class="col-md-4">
+    <label for="validationDefault01" class="form-label">Penokm</label>
+    <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+  </div>
+  <div class="col-md-4">
+    <label for="validationDefault02" class="form-label">Nom de Famille</label>
+    <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
+  </div>
 
             <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
