--- a/contact.html
+++ b/contact.html
@@ -100,11 +100,11 @@
            <form class="row g-3">
   <div class="col-md-4">
     <label for="validationDefault01" class="form-label">Penokm</label>
-    <input type="text" class="form-control" id="validationDefault01" value="Mark" required>
+    <input type="text" class="form-control" id="validationDefault01" placeholder="insérez votre nom" required>
   </div>
   <div class="col-md-4">
     <label for="validationDefault02" class="form-label">Nom de Famille</label>
-    <input type="text" class="form-control" id="validationDefault02" value="Otto" required>
+    <input type="text" class="form-control" id="validationDefault02" placeholder="insérez votre prenom" required>
   </div>
 
             <div class="mb-3">
